src/components/blocks/content/content.module.scss
.section {
    position: relative;
    overflow: hidden;
    // img {
    //     display: block;
    //     width: 50%;
    //     height: auto;
    //     margin: 0.5rem 0;
    //     border-radius: 8px;
    // }
    .background {
        user-select: none;
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;
        object-fit: cover;
        z-index: 1;
        filter: grayscale(1) opacity(0.2);
    }
}

